testing/tests/ui/transclude-missing.stderr
error: template "transclude-missing.html" not found in directories ["$WORKSPACE/target/tests/trybuild/rinja_testing/templates"]
 --> testing/templates/transclude-there.html:1:3
  |
       1 | {% include "transclude-missing.html" %}
         |   ^ close to this token
         |
 --> tests/ui/transclude-missing.rs:4:12
  |
4 | #[template(path = "transclude-there.html")]
  |            ^^^^

error: template "transclude-missing.html" not found in directories ["$WORKSPACE/target/tests/trybuild/rinja_testing/templates"]
 --> testing/templates/transclude-there.html:1:3
  |
       1 | {% include "transclude-missing.html" %}
         |   ^ close to this token
         |
 --> tests/ui/transclude-missing.rs:8:12
  |
8 | #[template(source = r#"{% include "transclude-there.html" %}"#, ext = "html")]
  |            ^^^^^^
